@@ -1,0 +1,75 @@
+body {
+    font-family: Verdana, Courier, sans-sarif;
+    font-size: 75%;
+}
+
+a:link, a:visited {
+    color: #000;
+}
+
+td.Event, td.BuildStep, td.Activity, td.Change, td.Time, td.Builder, td.LastBuild {
+    border: 1px solid #777;
+}
+
+td.Event, td.Change, td.Time, td.Builder {
+    background-color: #F3F3F3;
+}
+
+td.green {
+    background-color: #72ff75;
+}
+
+.table {
+    /* border-spacing: 2px; */
+    border-spacing: 0px;
+    width: 1%;
+    border-collapse: seperate;
+}
+
+td {
+    padding: 0.5ex 1ex;
+    text-align: center;
+    border: 1px solid #DDD;
+}
+
+/* Activity states */
+.idle {
+    background-color: #F3F3F3;
+}
+
+/* LastBuild, BuildStep states */
+.success {
+    background-color: #72ff75;
+}
+.failure,
+.failure a {
+    background-color: red;
+    color: white;
+}
+.warnings {
+    background-color: orange;
+}
+.exception {
+    background-color: #c000c0;
+}
+.start,.running {
+    background-color: yellow;
+}
+
+/* color trunk/branch builder links differently */
+
+.Builder a[href*="trunk"] {
+    color: #05e;
+}
+
+/* collective.buildbot custom */
+
+h1, h2, h3, h4, h5, h6 {
+    background-color:transparent;
+    border-bottom:1px solid #D0C8CD;
+    color:Black;
+    font-family:Arial,Helvetica,Geneva,Helv,"Lucida Grande",Lucida,sans-serif;
+    font-weight:normal;
+    margin:0pt 0pt 0.25em;
+}
+
